# Backend-simulator

./: README.md
src/backend/: CMakeLists.txt  package.xml
src/backend/include/: backend.h  backend_common.h  memory.h
src/backend/include/logger/: logger.h
src/backend/include/nnTrain/: MPTrainer.h  memory.h  nn_MP.h  nn_common.h  train_base.h  writer.h
src/backend/include/predictor/: kalman.h  predictor_base.h
src/backend/src/: backend.cpp  kalman.cpp  main.cpp  memory.cpp  predictor_base.cpp
src/backend/src/logger/: logger.cpp
src/backend/src/nnTrain/: MPTrainer.cpp  memory.cpp  nn_MP.cpp  train_base.cpp  writer.cpp
src/environment/: CMakeLists.txt  package.xml
src/environment/include/environment/: Environment.h  env_common.h
src/environment/include/robot/: rob_common.h  robot.h
src/environment/src/: Environment.cpp  main.cpp  robot.cpp
src/front_client/include/: Robot.h
src/front_client/src/: Robot.cpp
src/interface/: CMakeLists.txt  package.xml
src/interface/msg/: Armor.msg  Robot.msg  SaveData.msg
src/interfaces/: CMakeLists.txt
src/interfaces/msg/: Armor.msg  Armors.msg  Direction.msg  Label.msg  Train.msg
src/interfaces/srv/: Kalman1.srv  UpdateWriter.srv
src/valid/: CMakeLists.txt  package.xml
src/valid/include/: ValidNode.h
src/valid/src/: ValidNode.cpp  main.cpp
